# solo-leveling-gateway-api/src/main/resources/openapi.yml
@@ -234,6 +234,44 @@ paths:
         '204':
           description: Task skipped successfully
 
+  /api/v1/player/tasks/search:
+    post:
+      tags:
+        - player
+      summary: Search player tasks
+      operationId: searchPlayerTasks
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+            minimum: 0
+        - name: pageSize
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 20
+            minimum: 1
+            maximum: 100
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchRequest'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchPlayerTasksResponse'
+
   /api/v1/player/balance:
     get:
       tags:
@@ -277,7 +315,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SearchPlayerBalanceTransactionsRequest'
+              $ref: '#/components/schemas/SearchRequest'
       responses:
         '200':
           description: Successful response
@@ -336,7 +374,7 @@ components:
         playerTask:
           $ref: '#/components/schemas/PlayerTask'
 
-    SearchPlayerBalanceTransactionsRequest:
+    SearchRequest:
       type: object
       properties:
         options:
@@ -445,6 +483,18 @@ components:
           required:
             - transactions
 
+    SearchPlayerTasksResponse:
+      allOf:
+        - $ref: '#/components/schemas/QueryableResponse'
+        - type: object
+          properties:
+            tasks:
+              type: array
+              items:
+                $ref: '#/components/schemas/PlayerTask'
+          required:
+            - tasks
+
     # --- Enums ---
     UserRole:
       type: string
@@ -512,6 +562,12 @@ components:
         version:
           type: integer
           format: int32
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
         title:
           type: string
         description:
@@ -663,15 +719,15 @@ components:
         version:
           type: integer
           format: int32
-        order:
-          type: integer
-          format: int32
         createdAt:
           type: string
           format: date-time
         updatedAt:
           type: string
           format: date-time
+        order:
+          type: integer
+          format: int32
         status:
           $ref: '#/components/schemas/PlayerTaskStatus'
         task:
